--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <p>Tudo aquilo que sempre quis saber sobre o mundo tec, em um uníco lugar</p>
     </header>
     <nav>
-        <a href="#">Ho </a>
+        <a href="#">Home </a>
         <a href="#">Noticia</a>
         <a href="#">Curiosidades</a>
         <a href="#">fale conosco</a>
